--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ fastapi>=0.104.1
 uvicorn>=0.24.0
 python-multipart>=0.0.6
 pydantic>=2.4.2
+pydantic-settings>=2.1.0 
 
 # RAG Components
 langchain>=0.0.350
