chores: bug fixes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,28 @@
 # API Keys
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+openai_api_key=your_openai_api_key_here
+anthropic_api_key=your_anthropic_api_key_here  # Optional
 
-# Model Settings
-DEFAULT_MODEL=gpt-4
-OLLAMA_BASE_URL=http://localhost:11434
+# Data paths
+data_dir=data
+processed_data_dir=processed_data
+matches_file=data/matches.csv
+deliveries_file=data/deliveries.csv
+squads_file=data/squads.csv
 
-# Data Paths
-DATA_DIR=data
-PROCESSED_DATA_DIR=processed_data
+# Vector store settings
+vector_store_dir=vector_store
+vector_store_path=vector_store
 
-# Vector Store
-VECTOR_STORE_PATH=vector_store
+# Model settings
+default_model=gpt-3.5-turbo
+temperature=0.7
+max_tokens=1000
+ollama_base_url=http://localhost:11434
 
-# Logging
-LOG_LEVEL=INFO 
+# Server settings
+host=0.0.0.0
+port=8000
+log_level=INFO
+
+# CORS settings
+allowed_origins=["http://localhost:3000", "http://127.0.0.1:3000"]
