--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ pydantic-settings>=2.1.0
 
 # RAG Components
 langchain>=0.0.350
+langchain-community>=0.0.6
 chromadb>=0.4.18
 sentence-transformers>=2.2.2
 openai>=1.3.5
