--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ pydantic-settings>=2.1.0
 # RAG Components
 langchain>=0.0.350
 langchain-community>=0.0.6
+langchain-ollama>=0.0.1
 chromadb>=0.4.18
 sentence-transformers>=2.2.2
 openai>=1.3.5
